--- a/Test/Shipper.plist
+++ b/Test/Shipper.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/hillyoung/PublicSource/master/Test/Shipper.ipa?token=GHSAT0AAAAAABTIZBHRH4DTEFY66XGD3JKOYSNHFVA</string>
+					<string>https://raw.githubusercontent.com/hillyoung/PublicSource/master/Test/Shipper.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
