--- a/Test/Driver.plist
+++ b/Test/Driver.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/hillyoung/PublicSource/master/Test/Driver.ipa</string>
+					<string>http://r9wr8xgdf.bkt.clouddn.com/test/Driver.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
